--- a/config.env
+++ b/config.env
@@ -1,4 +1,6 @@
 NODE_ENV=development
 PORT=3000
 USERNAME=javy
-PASSWORD=12345
+DATABASE=mongodb+srv://javy:<PASSWORD>@cluster0.543ceaw.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_LOCAL=mongodb://localhost:27017/natours-test
+DATABASE_PASSWORD=LnUAR60xTEbQtmCQ
