--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,4 +23,7 @@
     "prefer-destructuring": ["error", { "object": true, "array": false }],
     "no-unused-vars": ["error", { "argsIgnorePattern": "req|res|next|val|error" }]
   }
+  // "engines": {
+  //   "node": ">=18.15.0"
+  // }
 }
