--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,8 +22,8 @@
     "class-methods-use-this": "off",
     "prefer-destructuring": ["error", { "object": true, "array": false }],
     "no-unused-vars": ["error", { "argsIgnorePattern": "req|res|next|val|error" }]
-  },
-  "engines": {
-    "node": ">=18.15.0"
   }
+  // "engines": {
+  //   "node": ">=18.15.0"
+  // }
 }
