Handling Invalid DATABASE IDs

--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=3000
 USERNAME=javy
 DATABASE=mongodb+srv://javy:<PASSWORD>@cluster0.543ceaw.mongodb.net/natours?retryWrites=true&w=majority
