Signing up Users

--- a/config.env
+++ b/config.env
@@ -4,3 +4,6 @@ USERNAME=javy
 DATABASE=mongodb+srv://javy:<PASSWORD>@cluster0.543ceaw.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours-test
 DATABASE_PASSWORD=LnUAR60xTEbQtmCQ
+
+JWT_SECRET=la-arepa-es-the-bestest-del-mundo
+JWT_EXPIRES_IN=90d
