Sending Emails with Nodemailer

--- a/config.env
+++ b/config.env
@@ -7,3 +7,8 @@ DATABASE_PASSWORD=LnUAR60xTEbQtmCQ
 
 JWT_SECRET=la-arepa-es-the-bestest-del-mundo
 JWT_EXPIRES_IN=30d
+
+EMAIL_USERNAME=c980b1ebb43dbc
+EMAIL_PASSWORD=528257500ee7c7
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=25
