Sending JWT via Cookie

--- a/config.env
+++ b/config.env
@@ -7,6 +7,7 @@ DATABASE_PASSWORD=LnUAR60xTEbQtmCQ
 
 JWT_SECRET=la-arepa-es-the-bestest-del-mundo
 JWT_EXPIRES_IN=30d
+JWT_COOKIE_EXPIRES_IN=30
 
 EMAIL_USERNAME=c980b1ebb43dbc
 EMAIL_PASSWORD=528257500ee7c7
