--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "helmet": "^6.1.5",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
+    "leaflet": "^1.9.3",
     "mongoose": "^5.13.17",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
