Building a Complex Email Handler

--- a/config.env
+++ b/config.env
@@ -13,3 +13,5 @@ EMAIL_USERNAME=c980b1ebb43dbc
 EMAIL_PASSWORD=528257500ee7c7
 EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=25
+
+EMAIL_FROM=javy@gmail.com
