--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon server.js",
     "start:prod": "SET NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js",
-    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url .",
     "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "Javy",
@@ -29,6 +29,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
+    "parcel-bundler": "^1.12.3",
     "pug": "^3.0.2",
     "sharp": "^0.32.1",
     "slugify": "^1.6.6",
@@ -45,7 +46,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
-    "parcel-bundler": "^1.12.5",
     "prettier": "^2.8.7"
   }
 }
