--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
+    "@types/stripe": "^8.0.417",
     "eslint": "^8.38.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
